Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.11
-
Can result in hang or crash
-
CREATE TABLE ... SELECT on mysql.innodb_table_stats can hang
-
Q2/2026 Server Maintenance
Description
I couldn't reproduce it in the test suite, but the issue is repeatable in the client:
MariaDB [test]> use test; |
MariaDB [test]> create table t1 (a int, key(a)) engine=InnoDB; |
MariaDB [test]> analyze table t1; |
|
|
MariaDB [test]> create table t1_stat as SELECT * FROM mysql.innodb_table_stats WHERE table_name='t1'; |
Query OK, 1 row affected, 1 warning (50.114 sec)
|
Records: 1 Duplicates: 0 Warnings: 1
|
|
|
MariaDB [test]> show warnings;
|
+---------+------+-----------------------------------------------------------------------+ |
| Level | Code | Message | |
+---------+------+-----------------------------------------------------------------------+ |
| Warning | 1088 | Error updating stats for table after table rebuild: Lock wait timeout | |
+---------+------+-----------------------------------------------------------------------+ |
1 row in set (0.000 sec) |
Same effect if there is `mysql.innodb_index_stats` instead of `mysql.innodb_table_stats` in the CREATE TABLE statement.
May be caused or related to MDEV-38667.
Attachments
Issue Links
- relates to
-
MDEV-38667 Assertion in diagnostics area on DDL stats timeout
-
- Closed
-